Given file crash when redering with Cycles in current master (debug build) - Pass issue? #53357

Closed
opened 2017-11-20 10:32:50 +01:00 by Bastien Montagne · 8 comments

System Information
Linux64 (debian testing), CPU rendering (i7 4700).

Blender Version
Broken: current master
Worked: unknown (no crash with 2.79 Release build)

Short description of error
Blender crash when finishing first tile of Cycles rendering, on failed assertion:

blender: /home/i74700deb64/blender/__work__/src/intern/cycles/render/buffers.cpp:240: bool ccl::RenderBuffers::get_pass_rect(ccl::PassType, float, int, int, float*): Assertion `pass.components == components' failed.

Exact steps for others to reproduce the error
In a current master's Debug build, open file below (from #53341) and try to render: Instance_Bug_v01.blend

**System Information** Linux64 (debian testing), CPU rendering (i7 4700). **Blender Version** Broken: current master Worked: unknown (no crash with 2.79 Release build) **Short description of error** Blender crash when finishing first tile of Cycles rendering, on failed assertion: ``` blender: /home/i74700deb64/blender/__work__/src/intern/cycles/render/buffers.cpp:240: bool ccl::RenderBuffers::get_pass_rect(ccl::PassType, float, int, int, float*): Assertion `pass.components == components' failed. ``` **Exact steps for others to reproduce the error** In a current master's Debug build, open file below (from #53341) and try to render: [Instance_Bug_v01.blend](https://archive.blender.org/developer/F1152493/Instance_Bug_v01.blend)
Author
Owner

Changed status to: 'Open'

Changed status to: 'Open'
Author
Owner

Added subscriber: @mont29

Added subscriber: @mont29
Lukas Stockner was assigned by Bastien Montagne 2017-11-20 10:34:01 +01:00
Author
Owner

Added subscriber: @LukasStockner

Added subscriber: @LukasStockner
Author
Owner

@LukasStockner assigning to you since iirc you did some rendering pass rework in past year or so ? Feel free to reassign otherwise. ;)

@LukasStockner assigning to you since iirc you did some rendering pass rework in past year or so ? Feel free to reassign otherwise. ;)

Added subscriber: @SteffenD

Added subscriber: @SteffenD

This issue was referenced by blender/cycles@d870db2ee9

This issue was referenced by blender/cycles@d870db2ee927b358a9830eb8d2b2bd52f9e349e7

This issue was referenced by 6be95f8778

This issue was referenced by 6be95f87787de68fb55b86968ddeb7c2507bf4f9

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#53357
No description provided.