Fix T53357: harmless assert after recent addition of render time pass.